<resources>
    <string name="app_name">空空清单</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="username">用&#160;户</string>
    <string name="orginpwd">原密码</string>
    <string name="pwd">密&#160;码</string>
    <string name="repwd">请再输入密码</string>
    <string name="register">没有账号 点击注册</string>
    <string name="loginin">登&#160;录</string>
    <string name="registerinfor">注&#160;册</string>
    <string name="rememberpwd">记住密码</string>
    <string name="email">邮&#160;箱</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="title_activity_index">首页</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_maintab">MainTabActivity</string>
    <string name="choosespinner">请选择任务类型</string>
    <string name="createtask">通知</string>
</resources>
