<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#87CEFA"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity" >
        <!--  photo view -->
        <ImageButton
            android:id="@+id/array"
            android:background="@drawable/array"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:id="@+id/photo"
            android:background="@drawable/camerabg"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            />
        <!--  注册信息部分 -->
        <LinearLayout
            android:id="@+id/registerpart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            >
            <!--  用户名 -->
            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/edittext"
                android:textSize="20sp"
                android:singleLine="true"
                android:textColorHint="#ffffff"
                android:drawablePadding="18dp"
                android:paddingLeft="25dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableLeft="@drawable/usericon"
                android:hint="@string/username"
                />
            <View android:background="#EEEEE0"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="2dp"
                />
            <!--  邮箱 -->
            <EditText
                android:id="@+id/emailaddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/edittext"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:drawablePadding="18dp"
                android:layout_marginTop="6dp"
                android:paddingLeft="25dp"
                android:layout_marginBottom="5dp"
                android:textColorHint="#ffffff"
                android:background="@null"
                android:drawableLeft="@drawable/email"
                android:hint="@string/email"
                />
            <View android:background="#EEEEE0"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                />
            <!--  密码 -->
            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/edittext"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#ffffff"
                android:drawablePadding="18dp"
                android:layout_marginTop="6dp"
                android:paddingLeft="25dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableLeft="@drawable/pwd"
                android:hint="@string/pwd"
                />
            <View android:background="#EEEEE0"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                />
            <!--  密码 -->
            <EditText
                android:id="@+id/repwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/edittext"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#ffffff"
                android:drawablePadding="18dp"
                android:layout_marginTop="6dp"
                android:paddingLeft="25dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableLeft="@drawable/pwd"
                android:hint="@string/repwd"
                />
            <View android:background="#EEEEE0"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                />
            <!--  <RadioGroup
                  android:id="@+id/gender"
                  android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:layout_marginTop="4dp"
                  android:orientation="horizontal"
                 >
                 <RadioButton
                      android:id="@+id/male"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:checked="true"
                      android:layout_marginLeft="20dp"
                      android:textSize="22sp"
                      android:textColor="#ffffff"
                      android:text="@string/male"
                     />
                 <RadioButton
                      android:id="@+id/female"
                      android:layout_marginLeft="60dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="22sp"
                      android:textColor="#ffffff"
                      android:text="@string/female"
                     />
             </RadioGroup>
             <View android:background="#EEEEE0"
                   android:layout_marginTop="2dp"
                   android:layout_width="match_parent"
                   android:layout_height="0.5dp"
                  /> -->
        </LinearLayout>
        <!--  注册按钮 -->
        <Button
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/registerinfor"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            />
    </LinearLayout>
</ScrollView>
