<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    <LinearLayout
        android:id="@+id/updatenewpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:layout_marginBottom="20dp"
        >
        <!--<EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal|center|center_vertical"
            android:textColor="#363636"
            android:clickable="false"
            android:enabled="false"
            android:textSize="20sp"
            android:background="@null"
            android:paddingLeft="15dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/alertpic"
            android:text="修改密码"/>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:background="@drawable/circlesettitle"
                android:gravity="center"
                android:text="空"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/titlealert"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:enabled="false"
                android:text="修改密码"
                android:textColor="#363636"
                android:textSize="18sp" /></LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#999999" />
        <!--  用户名 -->
        <EditText
            android:id="@+id/originPwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal|center|center_vertical"
            android:background="@drawable/side"
            android:textColor="#363636"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#999999"
            android:drawablePadding="18dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="18dp"
            android:paddingLeft="25dp"
            android:drawableLeft="@drawable/pwdmy"
            android:hint="@string/orginpwd"
            />

        <!--  密码 -->
        <EditText
            android:id="@+id/newpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal|center|center_vertical"
            android:background="@drawable/side"
            android:textColor="#363636"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#999999"
            android:drawablePadding="18dp"
            android:paddingLeft="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/pwdmy"
            android:hint="@string/pwd"
            />
        <!--  密码 -->
        <EditText
            android:id="@+id/renewpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal|center|center_vertical"
            android:background="@drawable/side"
            android:textColor="#363636"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#999999"
            android:drawablePadding="18dp"
            android:paddingLeft="25dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/pwdmy"
            android:hint="@string/repwd"
            />
    </LinearLayout>
</LinearLayout>
